--- a/jsons/translations/Spanish.properties
+++ b/jsons/translations/Spanish.properties
@@ -535,13 +535,11 @@ Compound Mix Meltdown = Fusión de mezcla compuesta
 
 Archive of the Arts = Archivo de las Artes
 
- # Requires translation!
-Encyclopedia = 
+Encyclopedia = Enciclopedia
 
 Homestead = Finca
 
- # Requires translation!
-Devil's Monument = 
+Devil's Monument = Monumento del Diablo
 
 Nuclear Storage = Almacén Nuclear
 
@@ -549,7 +547,7 @@ Devil's Nuclear Plant = Planta Nuclear del Diablo
 
 Silk Road = Ruta de la Seda
 
-Paradise Alley = Callejón Paraiso
+Paradise Alley = Callejón del Paraiso
 
 The Abbey = La Abadía
 
@@ -557,21 +555,19 @@ Divine Knowledge = Conocimiento Divino
 
 Arroyo = Arroyo
 
- # Requires translation!
-Arroyo Library = 
+Arroyo Library = Librería de Arroyo
 
 Ghost Mountain = Montaña Fantasma
 
- # Requires translation!
-Ghost Library = 
+Ghost Library = Librería Fantasma
 
-Alma Air Base = Base Aerea de Alma
+Alma Air Base = Base Aérea de Alma
 
 Alma Tank Depot = Almacén de Tanques de Alma
 
 Alma Base = Base Alma
 
-Alma Oil Depot = Almecén de Petroleo de Alma
+Alma Oil Depot = Almacén de Petroleo de Alma
 
 Hub Monument = Monumento a la Central
 
@@ -613,7 +609,7 @@ Slave House =
 #################### Lines from CityStateTypes ####################
 
 Farming = Agricultor
-Trading = Comerciak
+Trading = Comercial
 Weapons = Militar
 Prayer = Religiosa
 Research = Científica
@@ -937,26 +933,26 @@ You're on our blacklist now. Think twice before you want to do anything with my 
 Regulators = Reguladores
 Xanadu = Xanadú
 Gomorrah = Gomorra
-Diamond City = ciudad diamante
-Chance Springs = Manantiales de oportunidad
-The Den = la guarida
-Ransom = rescate
-Joker = bromista
+Diamond City = Ciudad Diamante
+Chance Springs = Manantiales de la Oportunidad
+The Den = La Guarida
+Ransom = Rescate
+Joker = Bromista
 Fortune = Fortuna
-Golden Toad = sapo dorado
-Beaksville = picosville
+Golden Toad = Sapo Dorado
+Beaksville = Villapico
 Lucky 76 = Suerte 76
 Horseshoe = Herradura
-Diablo Peak = Pico Diablo
+Diablo Peak = Pico del Diablo
 Malachite = Malaquita
 Wildcard = Comodín
-Paradise = paraíso
+Paradise = Paraíso
 Genting = Genting
-House Rules = Reglas de la casa
+House Rules = Reglas de la Casa
 Loki = Loki
 Straight Flush = Escalera de color
-Five Aces = cinco ases
-Show Low = Mostrar bajo
+Five Aces = Cinco Ases
+Show Low = Mostrar Bajo
 Deadrock Clan = Clan Roca Muerta
 
 Caesar = Cesar
@@ -1562,24 +1558,21 @@ This completely underwater city must have once been a true marvel of engineering
 
 #################### Lines from TileImprovements ####################
 
- # Requires translation!
-Food source = 
+Food source = Fuente de Comida
 
 Tree plantation = Plantación de Arboles
 
+Moisture trap = Trampa de Humedad
 
-Moisture trap = Trampa de humedad
-
-Solar collector = Colector solar
+Solar collector = Colector Solar
 
 Wind farm = Parque eólico
 
 Nature preserve = Reserva natural
 
-Artificial oasis = oasis artificial
+Artificial oasis = Oasis Artificial
 
-Artificial glacier = Glaciar artificial
-
+Artificial glacier = Glaciar Artificial
 
 Borough = Municipio
 
@@ -1613,21 +1606,19 @@ Settlement = Asentamiento
 
 Outpost = Puesto avanzado
 
-Narcotics farm = Granja de narcóticos
+Narcotics farm = Granja de Narcóticos
 
-Prison farm = Granja prisión
+Prison farm = Granja Prisión
 
-Oracle = Oraculo
-
+Oracle = Oráculo
 
 Seminary = Seminario
 
 Crystal Refinery = Refinería de Cristal
- # Requires translation!
-Refinery = 
 
- # Requires translation!
-Factory farm = 
+Refinery = Refineria
+
+Factory farm = Granja Industrial
 
 C1F3 Refinery = Refinería C1F3
 
@@ -1640,16 +1631,16 @@ SbF5 Refinery = Refinería SbF5
 VX Refinery = Refinería VX
 
 
-Survivor camp = campamento de sobrevivientes
+Survivor camp = Campamento de Sobrevivientes
 
 
 #################### Lines from TileResources ####################
 
-Grain = Grano
+Grain = Granos
 
 Algae = Algas
 
-Tubers = Tubérculo
+Tubers = Tubérculos
 
 Scrap =  Chatarra
 
@@ -1657,12 +1648,9 @@ Metal = Metal
 
 Insects = Insectos
 
-
-Groundwater = Agua subterránea
-
+Groundwater = Agua Subterránea
 
 Slaves = Esclavos
-
 
 Books = Libros
 
@@ -1670,23 +1658,21 @@ Data = Datos
 
 Encrypted Data = Datos Encriptados
 
-Machine Parts = Piezas de la máquina
-
+Machine Parts = Piezas de Maquinaria
 
 Soft Drinks = Gaseosas
 
- # Requires translation!
-Alcohol = 
+Alcohol = Alcohol
 
-Harvested Organs = Órganos cosechados
+Harvested Organs = Órganos Cosechados
 
 Narcotics = Narcóticos
 
-Refined Narcotics = Narcóticos refinados
+Refined Narcotics = Narcóticos Refinados
 
-Exotic Seeds = Semillas exóticas
+Exotic Seeds = Semillas eExóticas
 
-Tea Leaves = Hojas de té
+Tea Leaves = Hojas de Té
 
 Medicine = Medicina
 
@@ -1694,12 +1680,9 @@ Fabrics = Telas
 
 Honey = Miel
 
- # Requires translation!
-Stimulants = 
-
+Stimulants = Estimulantes
 
 Goats = Cabras
-
 
 Fungus = Hongos
 
@@ -1707,10 +1690,9 @@ Hostile Fauna = Fauna Hostil
 
 Hogs = Cerdos
 
-
 Artifacts = Artefactos
 
-Jellyfish = Medusa
+Jellyfish = Medusas
 
 Plankton = Plancton
 
@@ -1736,27 +1718,22 @@ VX =
 
 #################### Lines from UnitPromotions ####################
 
-Scrapper = Cuerpo a cuerpo
-Siege = asedio
-Helicopter = helicóptero
-Shooter = tirador
+Scrapper = Cuerpo a Cuerpo
+Siege = Asedio
+Helicopter = Helicóptero
+Shooter = Tirador
 Armor = Armadura
-Melee Water = cuerpo a cuerpo acuático
-Ranged Water = A distancia acuático
-Submarine = submarino
+Melee Water = Cuerpo a Cuerpo Acuático
+Ranged Water = A Distancia Acuático
+Submarine = Submarino
 Aircraft Carrier = Portaaviones
 Fighter = Luchador
 Bomber = Bombardero
 Mounted = Montado
-
 Entrench = Atrincherar
-
 Forage = Rebuscador
-
 Skirmish = Escaramuza
-
 Shock = Choque
-
 Loose Formation = Formación Suelta
 
 Hull Down = Casco hacia abajo
@@ -1776,11 +1753,11 @@ Combat Drill = Simulacro de Combate
 
 Strike = Huelga
 
-Bombardment = bombardeo
+Bombardment = Bombardeo
 
 Targeting = Orientación
 
-Armor Plating = Revestimiento de armadura
+Armor Plating = Revestimiento
 
 
 Reconnaissance I = Reconocimiento I
@@ -1789,7 +1766,7 @@ Reconnaissance II = Reconocimiento II
 
 Reconnaissance III = Reconocimiento III
 
-Smokescreen = cortina de humo
+Smokescreen = Cortina de Humo
 
 Assault = Asalto
 
@@ -1811,20 +1788,17 @@ Barrage = Cortina de Fuego
 
 Resupply = Reabastecer
 
-
 Littoral Warfare = Guerra Litoral
 
-Exploit Weakness = Explotar debilidad
+Exploit Weakness = Explotar Debilidad
 
-Damage Control = Control de daño
+Damage Control = Control de Daño
 
 Close-In Weapons System = Sistema de Armas de Cercanía
 
-Flank Speed = Velocidad de flanco
+Flank Speed = Velocidad de Flanco
 
- # Requires translation!
-Convoy = 
-
+Convoy = Caravana
 
  # Requires translation!
 Seafarer = 
@@ -1884,8 +1858,7 @@ Powered Armor = Armadura potenciada
 Gas Mask = Mascara de Gas
 
 Headhunter = Cazatalentos
- # Requires translation!
-military = 
+military = Militar
  # Requires translation!
 Earn [amount]% of [param] opponent's [param2] as [stat] for kills = 
 
@@ -1894,7 +1867,7 @@ Raider = Saqueador
 
 Hazard Pay = Pago por Riesgo
 
-Pride = orgullo
+Pride = Orgullo
 
 Stormfront = frente tormentoso
 
@@ -1916,13 +1889,13 @@ Big Rig = Gran Camión
 
 #################### Lines from UnitTypes ####################
 
-Civilian = civil
+Civilian = Civil
 
 
-Civilian Water = Civil acuático
+Civilian Water = Civil Acuático
 
 
-Missile = misil
+Missile = Misil
 
 Can pass through impassable tiles = Puede atravesar casillas infranqueables
 
@@ -1951,13 +1924,13 @@ Tactical Nuke = Arma Nuclear Táctica
 Missile Defense System = 
 
  # Requires translation!
-Low Tech = 
+Low Tech = Rudimentario
 
-First Aid = primeros auxilios
+First Aid = Primeros Auxilios
 
-Private = Privado
+Private = Soldado Raso
  # Requires translation!
-Personnel = 
+Personnel = Personal
 
 
 Scavenger = Chatarrero
@@ -1972,21 +1945,18 @@ Swordsman = Espadachín
 Sharkman = 
 
 Auxiliary = Auxiliario
- # Requires translation!
-Enslaved = 
+ 
+Enslaved = Esclavizado
 
- # Requires translation!
-Rubble Gang = 
+Rubble Gang = Pandillero de los Escombros
 
+Rubble Archer = Arquero de los Escombros
 
-Rubble Archer = Arquero de escombros
-
-
-Clan Horseman = Jinete del clan
+Clan Horseman = Jinete del Clan
 
 Skirmisher = Escaramuzador
 
-Rubble Rider = Jinete de escombros
+Rubble Rider = Jinete de Escombros
 
 
  # Requires translation!
@@ -2003,13 +1973,13 @@ Panther = Pantera
 
 Soldier = Soldado
 
-Black Beret = Boina negra
+Black Beret = Boina Negra
 
 Conscript = Recluta
 
-Forward Observer = observador delantero
+Forward Observer = Observador Delantero
 
-Rubble Militia = Milicia de escombros
+Rubble Militia = Milicia de los Escombros
 
 
 Purge Robot MKI = Robot de purga MKI
@@ -2025,14 +1995,13 @@ NBC Conscript = Recluta NBC
 
 Exo-Trooper = Exo-Soldado
 
-Henchman = secuaz
+Henchman = Secuaz
 
 Gunman = Pistolero
 
-Hitman = sicario
+Hitman = Sicario
 
-Rubble Gunman = Pistolero de escombros
-
+Rubble Gunman = Pistolero de los Escombros
 
 Marksman = Tirador
 
@@ -2040,20 +2009,18 @@ Spec Ops = Fuerzas Especiales
 
 Assassin = Asesino
 
-
 NBC Marksman = Tirador NBC
 
-Black Ops = operaciones encubiertas
+Black Ops = Operaciones Encubiertas
 
 Hussar = Húsar
-
 
 Dragoon = Dragón
 
 Light Cavalry = Caballería Ligera
 
 
-Jetsuit = traje de jet 
+Jetsuit = Traje Jet 
 
 Special Forces = Fuerzas Especiales
 
@@ -2063,7 +2030,7 @@ Drop Troops =
 
 Attack Vehicle = Vehiculo de Ataque
 
-Recon Squad = Escuadrón de reconocimiento
+Recon Squad = Escuadrón de Reconocimiento
 
 War Buggy = Bugui de Guerra
 
@@ -2071,9 +2038,7 @@ Armored Car = Carro Blindado
 
 Demolition Track = Camión de Demolición
 
-
- # Requires translation!
-4x4 = 
+4x4 = 4x4
 
 
 Salvaged Purge Robot = Robot de purga rescatado
@@ -2135,7 +2100,7 @@ GF Drone = Dron GF
 
 Dinghy = Bote
 
-Trimaran = trimarán
+Trimaran = Trimarán
 
 Patrol Boat = Bote de Patrullaje
 
@@ -2145,11 +2110,11 @@ Attack Boat = Bote de Ataque
  # Requires translation!
 Corvette = 
 
-Assault Ship = Barco de asalto
+Assault Ship = Barco de Asalto
 
-Torpedo Boat = Barco torpedero
+Torpedo Boat = Barco Torpedero
 
-Jet Boat = Lancha motora
+Jet Boat = Lancha Motora
 
 
 Stasis Cruiser = Crucero de estasis
@@ -2158,7 +2123,7 @@ Stasis Cruiser = Crucero de estasis
 Heavy Carrier = Transportista Pesado
 
 
-Philosopher = filósofo
+Philosopher = Filósofo
 
  # Requires translation!
 Censor = 
@@ -2169,28 +2134,26 @@ Great Administrator = Gran Administrador
 Great Prophet = Gran Profeta
 
 
-Smuggler = contrabandista
+Smuggler = Contrabandista
 
-Slave Trader = comerciante de esclavos
+Slave Trader = Comerciante de Esclavos
 
 
-Great Mad Scientist = Gran científico loco
+Great Mad Scientist = Gran científico Loco
 
-Gangboss = pandillero
+Gangboss = Jefe de Pandilla
 
 Bugler = Cornetín
 
- # Requires translation!
-Great Farmer = 
+Great Farmer = Gran Agricultor
 
 Biker = Motociclista
 
-Swarm = enjambre
+Swarm = Enjambre
 
-Wild Dog = perro salvaje
+Wild Dog = Perro Salvaje
 
 Bandit = Bandido
-
 
 Looter = Vandalo
 
@@ -2202,20 +2165,20 @@ Irregular = Irregular
 
 Insurgent = Insurgente
 
-Partisan = partidista
+Partisan = Partidista
 
-Outlaw = fuera de la ley
+Outlaw = Exiliados
 
  # Requires translation!
 Charro = 
 
-Highwayman = salteador de caminos
+Highwayman = Asalta Caminos
 
-Robber = ladrón
+Robber = Ladrón
 
 Sandrail = Sandrail
 
-Junker = chatarrero
+Junker = Chatarrero
 
 Jalopy = Cacharro
 
