- update free unit unique for Atlas - update "translation" for upgrading all units

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -33,6 +33,8 @@ Upgrade to [unitType] ([goldCost] gold) = Upgrade to [unitType] ([goldCost] wate
 
 Upgrade to [unitType]\n([goldCost] gold, [resources]) = Upgrade to [unitType]\n([goldCost] water, [resources])
 
+Upgrade all [count] [unit] ([cost] gold) = Upgrade all [count] [unit] ([cost] water)
+
 Disband this unit for [goldAmount] gold? = Disband this unit for [goldAmount] water?
 
 Buy for [amount] gold = Buy for [amount] water
