--- a/jsons/translations/Catalan.properties
+++ b/jsons/translations/Catalan.properties
@@ -1800,8 +1800,7 @@ Starting tech = Tecnologia inicial
 Sailing = Navegació
 Be fruitful, and multiply, and replenish the earth, and subdue it: and have dominion over the fish of the sea, and over the fowl of the air, and over every living thing that moveth upon the earth. = Fructifiqueu i multiplique-vos. Ompliu la terra i domineu-la. I apodereu-vos del peix del mar, de les aus del cel i de totes les coses que es mouen per la terra.
 Redomestication = Redomesticació
- # Requires translation!
-And the apostates cried, abandon your works, lest all the world be swallowed by the deluge. And many indeed came to follow them. Fools they were to defy the Spark! For did He not promise to never again drown the land? And, in punishment for their hubris, He sent the great flood of fire; and the unbelievers were turned to dust. = 
+And the apostates cried, abandon your works, lest all the world be swallowed by the deluge. And many indeed came to follow them. Fools they were to defy the Spark! For did He not promise to never again drown the land? And, in punishment for their hubris, He sent the great flood of fire; and the unbelievers were turned to dust. = I els apòstates cridaren que abandonessin les seves feines i deixessin que el món fos engolit per les pluges. I molts els van seguir. Bojos que van gosar desafiar a la Guspira! Per què no prometé que no inundaria mai més el món? I, com a càstig per la seva arrogància, envià la gran inundació de foc. Els no creients foren reduïts a cendres.
 Secrets of the Past = Secrets del passat
 I know not with what weapons World War III will be fought, but World War IV will be fought with sticks and stones. = No sé amb quines armes es lluitarà la Tercera Guerra Mundial, però la Quarta Guerra Mundial es lluitarà amb pals i pedres.
 Iron Working = Treball del ferro
@@ -1815,8 +1814,7 @@ Machinery = Maquinària
 Improves movement speed on roads = Millora la velocitat de moviment a les caselles amb carretera.
 The meek shall inherit the Earth, but not its mineral rights. = Els mansos heretaran la Terra, però no els seus recursos minerals.
 Mining = Mineria
- # Requires translation!
-I know that all of us here have earned our places beyond doubt. But we are not safe, even here, and we cannot afford to stand still. I need your support today. I was appointed to this position not to sit behind a desk, but to fix problems, and that is what I intend to do... = 
+I know that all of us here have earned our places beyond doubt. But we are not safe, even here, and we cannot afford to stand still. I need your support today. I was appointed to this position not to sit behind a desk, but to fix problems, and that is what I intend to do... = Sé que tots nosaltres hem aconseguit el nostre lloc merescudament. Però no estem segurs, fins i tot aquí, i no podem permetre’ns quedar-nos sense fer res. Necessito la vostra ajuda. M’han assignat aquest càrrec no per a seure darrera una taula, sinó per a arreglar problemes. I això és el que penso fer...
 Trade = Comerç
 Enables Open Borders agreements = Permet acords de fronteres obertes
 
@@ -1831,8 +1829,7 @@ History doesn't repeat itself but it often rhymes. = La història mai es repetei
 Engineering = Enginyeria
 Roads connect tiles across rivers = Les carreteres també connecten caselles a través dels rius.
 
- # Requires translation!
-Hereby it is manifest that during the time men live without a common Power to keep them all in awe, they are in that condition which is called War; and such a war as is of every man against every man. = 
+Hereby it is manifest that during the time men live without a common Power to keep them all in awe, they are in that condition which is called War; and such a war as is of every man against every man. = És un manifest que durant els temps que els homes vivien sense un Poder Comú que els mantingués, vivien en Guerra. I que aquesta guerra feia que cada home visqués contra els altres homes.
 Education = Educació
 Enables Research agreements = Permet acords de recerca
 The old men are all dead. It is the young men who say yes or no. = Els homes antics han mort tots. Són els joves els qui diuen sí o no.
@@ -1846,8 +1843,7 @@ Modern industrial farming is largely a strategy for turning fossil fuels into fo
 Ecology = Ecologia
 If the brain were so simple we could understand it, we would be so simple we couldn't. = Si el cervell fos tan simple com per a entendre’l, seríem tan simples que no el podríem entendre.
 Biology = Biologia
- # Requires translation!
-Is it a fact - or have I dreamt it - that, by means of electricity, the world of matter has become a great nerve, vibrating thousands of miles in a breathless point of time? = 
+Is it a fact - or have I dreamt it - that, by means of electricity, the world of matter has become a great nerve, vibrating thousands of miles in a breathless point of time? = És un fet, o potser ho he somiat, que amb l’electricitat el món de la matèria ha aconseguit vibrar fins a punts a milers de quilòmetres de distància en un punt del temps sense alè?
 Steam Power = Màquina de vapor
 They are casting their problems on society. And, you know, there is no such thing as society. = Aboquen els seus problemes a la societat. I, ja ho sabeu, la societat no existeix.
 Civil Service = Funcionariat
@@ -1863,8 +1859,7 @@ Rifling = Canó estriat
 Has the last word been said? Must hope disappear? Is defeat final? No! Believe me, I speak to you with full knowledge of the facts and tell you that nothing is lost. = Ja s’ha dit l’última paraula? Desapareixerà l’esperança? És la derrota final? No! Creieu-me. Parlo amb ple coneixement dels fets i us dic que no tot està perdut.
 Radio = Ràdio
 
- # Requires translation!
-Record the start and finish times of the lights and appliances when you are finished in your logbook. If your role involves access to running water, you must record the meter readings before and after use. Failure to do so will lead to disciplinary action.\n\nRemember -\nEVERY DROP COSTS = 
+Record the start and finish times of the lights and appliances when you are finished in your logbook. If your role involves access to running water, you must record the meter readings before and after use. Failure to do so will lead to disciplinary action.\n\nRemember -\nEVERY DROP COSTS = Anota el temps d’inici i final dels aparells i llums quan acabeu al llibre de registre. Si el vostre rol inclou l’accés a aigua potable, també heu d’anotar les lectures abans i després de fer-ne servir. Si no ho feu, es procedirà a aplicar accions disciplinàries.\n\nRecordeu:\nCADA GOTA COMPTA
 Desalination = Dessalinització
 There is a plague on Man: his opinion that he knows something. = Hi ha una plaga a sobre de l’home: la seva opinió de que sap alguna cosa.
 Laboratory = Laboratori
@@ -1877,32 +1872,27 @@ Munitions = Munició
 Iron and heat are, as we know, the supporters, the bases, of the mechanic arts. = El ferro i la calor són, tal com sabem, el suport i les bases de les arts mecàniques.
 Railroads = Ferrocarril
 
- # Requires translation!
-Thank you. I assure you, I am well aware of the contents of the latest report.\n\nWhat choice is it you think we have? The time for caution is long past. We can only work with the greatest urgency in the hope that we may realize a technological solution. Anything less can lead only to failure, my friends. = 
+Thank you. I assure you, I am well aware of the contents of the latest report.\n\nWhat choice is it you think we have? The time for caution is long past. We can only work with the greatest urgency in the hope that we may realize a technological solution. Anything less can lead only to failure, my friends. = Gràcies. Us asseguro que conec els continguts de l’últim informe.\n\nQuina opció penseu que tenim? El temps per a la prudència fa temps que es va acabar. Només podem treballar amb celeritat i amb l’esperança que puguem trobar una solució tecnològica. Qualsevol cosa ens pot portar al fracàs, amics.
 Hydroponics = Hidropònica
 Ben, I want to say one word to you, just one word: plastics. = Ben, només et vull dir una paraula... només una paraula: plàstics.
 Plastics = Plàstics
 Aeronautics was neither an industry nor a science. It was a miracle. = L’aeronàutica no era ni una indústria ni una ciència. Era un miracle.
 Flight = Vol
- # Requires translation!
-Our goal is not the victory of might, but the vindication of right; not peace at the expense of freedom, but both peace and freedom, here in this hemisphere, and, we hope, around the world.\n\nGod willing, that goal will be achieved. = 
+Our goal is not the victory of might, but the vindication of right; not peace at the expense of freedom, but both peace and freedom, here in this hemisphere, and, we hope, around the world.\n\nGod willing, that goal will be achieved. = El nostre objectiu no és la victòria del poder, sinó la reivindicació del que és just; no la pau a canvi de la llibertat, sinó ambdues: la pau i la llibertat. Aquí en aquest hemisferi i, esperem, per tot el món.\n\nDéu vulgui que aconseguim el nostre objectiu.
 Ballistics = Balística
 
 The nation that destroys its soil destroys itself. = La nació que destrueix la terra, es destrueix a si mateixa.
 Land Remediation = Descontaminació de la terra
- # Requires translation!
-This has been a challenging quarter with falls in demand from states and agencies. Blackwarden Associates has recalibrated its operations across geographies, moving away from security and relief operations in Asia and divesting from the radiological remediation sector. By focusing on core domestic operations for private sector clients, we have successfully generated free cashflows despite adverse market conditions. = 
+This has been a challenging quarter with falls in demand from states and agencies. Blackwarden Associates has recalibrated its operations across geographies, moving away from security and relief operations in Asia and divesting from the radiological remediation sector. By focusing on core domestic operations for private sector clients, we have successfully generated free cashflows despite adverse market conditions. = Ha estat un període durant el qual la demanda d’estats i agències s’ha reduït. Els Associats Guardanegre han ajustat les seves operacions per la geografia, allunyant-se de les operacions de seguretat a l’Àsia i del sector de descontaminació radiològica. Es centra en les operacions domèstiques dels clients del sector privat i ha aconseguit generar beneficis tot i les condicions adverses del mercat.
 Computers = Ordinadors
- # Requires translation!
-Things may be the same again; and we must fight\nNot in the hope of winning but rather of keeping\nSomething alive: so that when we meet our end,\nIt may be said that we tackled wherever we could,\nThat battle-fit we lived, and though defeated,\nNot without glory fought. = 
+Things may be the same again; and we must fight\nNot in the hope of winning but rather of keeping\nSomething alive: so that when we meet our end,\nIt may be said that we tackled wherever we could,\nThat battle-fit we lived, and though defeated,\nNot without glory fought. = Les coses tornaran a ser com abans. I hem de lluitar\nno amb l’esperança de guanyar, sinó per mantenir\nalguna cosa viva: per tal que, quan arribem a la fi,\nes pugui dir que vam fer tot el que vam poder,\nque vam resistir i, encara que siguem derrotats,\nla lluita haurà estat gloriosa.
 Gyroscopes = Giroscopis
 The root of the evil is not the construction of new, more dreadful weapons. It is the spirit of conquest. = L’arrel del mal no és la construcció d’armes noves més terrorífiques. És l’esperit de la conquesta.
 Combined Arms = Armes combinades
 'Talent hits a target no one else can hit; Genius hits a target no one else can see.' = «El talent arriba a un objectiu al qual ningú més pot arribar. El geni arriba a un objectiu que ningú més pot veure.»
 Radar = Radar
 
- # Requires translation!
-In a real sense, the empires of old collapsed under their own weight; vast hierarchies of bureacrats, functionaries with no function, leaders without legitimacy. They could not adapt, not even to save themselves. From their ashes, we are building a new State; lean, strong, and vital. = 
+In a real sense, the empires of old collapsed under their own weight; vast hierarchies of bureacrats, functionaries with no function, leaders without legitimacy. They could not adapt, not even to save themselves. From their ashes, we are building a new State; lean, strong, and vital. = En sentit estricte, els imperis de l’antiguitat van afonar-se pel seu propi pes; grans jerarquies de buròcrates, funcionaris sense funcions, líders sense legitimitat... No es van poder adaptar ni per a salvar-se a si mateixos. Amb les seves cendres, construirem un Estat nou. Fort i vital.
 Networking = Connexions en xarxa
 In the end, that's what this election is about. Do we participate in a politics of cynicism, or do we participate in a politics of hope? = Al final, aquestes eleccions van d’això. Som part de la política del cinisme o d’una política d’esperança?
 Avionics = Aviònica
@@ -1916,8 +1906,7 @@ Rocketry = Coets
 Anyone who believes exponential growth can go on forever in a finite world is either a madman or an economist. = Tothom qui pensi que el creixement exponencial pot durar per sempre en un món finit o bé és un boig o bé és un economista.
 Social Engineering = Enginyeria social
 
- # Requires translation!
-Each of the original messages contains a silver of wisdom, and whenever they seem to say different or incompatible things it is only because all are alluding, allegorically, to the same primeval truth.\n \nAs a consequence, there can be no advancement of learning. Truth has been already spelled out once and for all, and we can only keep interpreting its obscure message... = 
+Each of the original messages contains a silver of wisdom, and whenever they seem to say different or incompatible things it is only because all are alluding, allegorically, to the same primeval truth.\n \nAs a consequence, there can be no advancement of learning. Truth has been already spelled out once and for all, and we can only keep interpreting its obscure message... = Cadascun dels missatges originals conté una peça de saviesa i, encara que a vegades es diguin coses incompatibles, només és perquè es fan referències alegòriques a la mateixa veritat primordial.\n\nI, en conseqüència, no hi pot haver avenços en l’aprenentatge. La veritat ja s’ha dit una i una altra vegada i només podem interpretar els seus obscurs missatges...
 Genetics = Genètica
 In nothing do men more nearly approach the gods than in giving health to men. = En res s’apropen més els homes als déus que quan donen salut a altres homes.
 Pharmaceuticals = Farmacèutica
@@ -1940,19 +1929,16 @@ Incentivization = Incentivació
 
 'Every man takes the limits of his own field of vision and confuses them for the limits of the world.' = «Tots els homes tenen el límit en el seu camp de visió, que confonen amb els límits del món.»
 Particle Physics = Física de partícules
- # Requires translation!
-I believe that man will not merely endure: he will prevail. He is immortal, not because he alone among creatures has an inexhaustible voice, but because he has a soul, a spirit capable of compassion and sacrifice and endurance. = 
+I believe that man will not merely endure: he will prevail. He is immortal, not because he alone among creatures has an inexhaustible voice, but because he has a soul, a spirit capable of compassion and sacrifice and endurance. = Crec que l’home no només resistirà: s’imposarà. És immortal, no perquè té una veu incansable, sinó perquè té ànima, un esperit capaç de compadir-se, sacrificar-se i resistir.
 Energy Weapons = Armes d’energia
 'Governor, our first generation of Operational Robots are active, their efficiency rate is 125%.' = «Governador, la nostra primera generació de Robots Operacional ja està activa. La seva eficiència és del 125 %.»
 Robotics = Robòtica
 
- # Requires translation!
-All analysed pathways limiting warming to 1.5°C with no or limited overshoot use CO2 removal to some extent to neutralize emissions. = 
+All analysed pathways limiting warming to 1.5°C with no or limited overshoot use CO2 removal to some extent to neutralize emissions. = Tots els camins analitzats limiten l’escalfament global a 1,5°C amb gens o un augment limitat d’emissions de CO2, fent un esforç per limitar les emissions.
 Atmosphere Remediation = Descontaminació atmosfèrica
 This is only a foretaste of what is to come, and only the shadow of what is going to be. = Això és només una mostra del que vindrà i només és l’ombra del que serà.
 Artificial Intelligence = Intel·ligència artificial
- # Requires translation!
-You ask, what is our aim? I can answer in one word. It is victory. Victory at all costs - Victory in spite of all terrors - Victory, however long and hard the road may be, for without victory there is no survival. = 
+You ask, what is our aim? I can answer in one word. It is victory. Victory at all costs - Victory in spite of all terrors - Victory, however long and hard the road may be, for without victory there is no survival. = I pregunteu què volem? Ho puc respondre en una sola paraula: victòria. Victòria costi el que costi, a pesar d’enfrontar-nos a tots els terrors. Victòria, per molt llarg que sigui el camí, ja que sense victòria no hi haurà supervivència.
 Future Materials = Materials del futur
 
 It always seems impossible until it's done. = Sembla impossible fins que es fa.
