Update Blackwarden's unique for buying city states, exclude Barbarians from map editor

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -77,7 +77,7 @@ Give Gold = Give Water
 
 Grants 500 Gold to the first civilization to discover it = Grants 500 water to the first civilization to discover it
 
-Can spend Gold to annex or puppet a City-State that has been your ally for [amount] turns. = Can spend Water to annex or puppet a City-State that has been your ally for [amount] turns
+Can spend Gold to annex or puppet a City-State that has been your Ally for [amount] turns = Can spend Water to annex or puppet a City-State that has been your Ally for [amount] turns
 
 Gifts of Gold to City-States generate [relativeAmount]% more Influence = Gifts of Water to City-States generate [relativeAmount]% more Influence
 
